<resources>
    <string name="app_name">VShare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_contain">Contain</string>

    <!-- fragment title -->
    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_retrieve">Retrieve</string>
    <string name="title_chat_info">Chat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_password_again">countersign</string>
    <string name="prompt_code">Code</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_next">Next</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="retrieve">Retrieve Password</string>
    <string name="no_account">No Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_sure">Sure</string>
    <string name="sign_up_addr_hint">Input your Email to get code</string>
    <string name="sign_up_password_hint">Input your password</string>

    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lee</string>
    <string name="nav_header_subtitle">JefferyLeeg@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_mode">Night Mode</string>

    <!-- Strings related to bottomNavigationView -->
    <string name="title_home">Home</string>
    <string name="title_blogs">Blogs</string>
    <string name="title_recreation">Recreation</string>
    <string name="title_message">Message</string>

    <!-- Strings related to homeFragment -->
    <string name="home_fragment_notes">List of Notes in homeFragment</string>
    <string name="blog_fragment_notes">List of Notes in blogFragment</string>
    <string name="recreation_fragment_notes">List of Notes in recreationFragment</string>
    <string name="message_fragment_notes">List of Notes in messageFragment</string>
    <string name="video_fragment_notes">List of Notes in videoFragment</string>
    <string name="music_fragment_notes">List of Notes in musicFragment</string>
    <string name="picture_fragment_notes">List of Notes in pictureFragment</string>
    <string name="chats_fragment_notes">List of Notes in chatsFragment</string>
    <string name="chat_info_fragment_notes">List of Notes in chatInfoFragment</string>

    <!-- Strings related to common -->
    <string name="unknown">unknown</string>

    <!-- Strings related to description -->
    <string name="login_recycle">Login History</string>


    <!-- Strings related to tagFlowLayout -->
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

</resources>
