<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/safe_spacing"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@color/transparent"
            android:hint="@string/sign_up_password_hint"
            android:textSize="@dimen/sp_18" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/editGray"
            android:hint="@string/prompt_code"
            android:inputType="text"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingEnd="@dimen/safe_spacing"
            android:paddingStart="@dimen/safe_spacing"/>

        <EditText
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/editGray"
            android:hint="@string/prompt_newpassword"
            android:inputType="textPassword"
            android:maxLength="40"
            android:maxLines="1"
            android:paddingStart="@dimen/safe_spacing"
            android:paddingEnd="@dimen/safe_spacing" />


        <EditText
            android:layout_marginTop="@dimen/safe_spacing"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/editGray"
            android:hint="@string/prompt_password_again"
            android:inputType="textPassword"
            android:maxLength="40"
            android:maxLines="1"
            android:paddingStart="@dimen/safe_spacing"
            android:paddingEnd="@dimen/safe_spacing" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_36"
            android:text="@string/password_sure"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingEnd="@dimen/safe_spacing"
            android:text="@string/retrieve"
            android:textColor="@color/textGreen"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>
</layout>
