<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/safe_spacing"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nav_header_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:maxLength="12"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_icon" />

    <TextView
        android:id="@+id/nav_header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_nickname" />

    <ImageView
        android:id="@+id/nav_header_mode_night_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="@+id/nav_header_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_header_icon"
        app:srcCompat="@drawable/ic_mode_night_40dp" />

    <TextView
        android:id="@+id/nav_header_mode_night_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/safe_spacing"
        android:text="@string/nav_header_mode"
        app:layout_constraintLeft_toLeftOf="@+id/nav_header_mode_night_img"
        app:layout_constraintRight_toRightOf="@+id/nav_header_mode_night_img"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_mode_night_img" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nav_header_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/safe_spacing"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_subtitle" />

    <FrameLayout
        android:id="@+id/nav_header_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
