<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/safe_spacing"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_50"
                bind:showImgCircle="@{@drawable/icon}" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:background="@color/editGray"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterOverflowTextAppearance="@style/overAppearance"
                app:errorTextAppearance="@style/errorAppearance"
                app:hintTextAppearance="@style/hintAppearance">

                <EditText
                    android:id="@+id/email"
                    style="@style/EditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_spacing"
                android:background="@color/editGray"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterOverflowTextAppearance="@style/overAppearance"
                app:errorTextAppearance="@style/errorAppearance"
                app:hintTextAppearance="@style/hintAppearance"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    style="@style/EditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_36"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>
